começo das listas

--- a/Discover/index.html
+++ b/Discover/index.html
@@ -17,7 +17,25 @@
     <div id="container">
       <div id="profile">
         <img src="./assets/avatar.png " alt="Foto" />
+        <p>@marcelosilva23</p>
       </div>
+      <ul>
+        <li>
+          <a href="#" target="_blank">Quem Sou</a>
+        </li>
+
+        <li>
+          <a href="https://www.google.pt" target="blank">Baixar meu ebook</a>
+        </li>
+
+        <li>
+          <a href="#" target="_blank">Qualquer Coisa</a>
+        </li>
+
+        <li>
+          <a href="#" target="_blank">Piada random</a>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
