--- a/Discover/index.html
+++ b/Discover/index.html
@@ -36,7 +36,7 @@
           <a href="#" target="_blank">Piada random</a>
         </li>
       </ul>
-      <div id="social links">
+      <div id="social-links">
         <ion-icon name="logo-github"></ion-icon>
         <ion-icon name="logo-instagram"></ion-icon>
         <ion-icon name="logo-youtube"></ion-icon>
