--- a/Discover/index.html
+++ b/Discover/index.html
@@ -37,11 +37,27 @@
         </li>
       </ul>
       <div id="social-links">
-        <ion-icon name="logo-github"></ion-icon>
-        <ion-icon name="logo-instagram"></ion-icon>
-        <ion-icon name="logo-youtube"></ion-icon>
-        <ion-icon name="logo-linkedin"></ion-icon>
+        <a href="https://github.com/marcelosilva23" target="_blank">
+          <ion-icon name="logo-github"></ion-icon>
+        </a>
+
+        <a href="https://github.com/marcelosilva23" target="_blank">
+          <ion-icon name="logo-instagram"></ion-icon>
+        </a>
+
+        <a href="https://github.com/marcelosilva23" target="_blank">
+          <ion-icon name="logo-youtube"></ion-icon>
+        </a>
+
+        <a href="https://github.com/marcelosilva23" target="_blank">
+          <ion-icon name="logo-linkedin"></ion-icon>
+        </a>
       </div>
+
+      <footer>
+        Feito com ♥ por
+        <a href="https://github.com/marcelosilva23" target="_blank">Marcelo</a>
+      </footer>
     </div>
 
     <script
