--- a/Discover/index.html
+++ b/Discover/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="light">
+<html lang="pt-br" class="">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,6 +19,12 @@
         <img src="./assets/avatar.png " alt="Foto" />
         <p>@marcelosilva23</p>
       </div>
+
+      <div id="switch">
+        <button></button>
+        <span></span>
+      </div>
+
       <ul>
         <li>
           <a href="#" target="_blank">Quem Sou</a>
