toggle funcionando com mudança de imagem e passando do dark para o light

--- a/Discover/index.html
+++ b/Discover/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./assets/avatar.png " alt="Foto" />
+        <img src="./assets/avatar-black.png" alt="Foto" />
         <p>@marcelosilva23</p>
       </div>
 
