--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
         </li>
 
         <li>
-          <a href="https://www.google.pt" target="blank">Baixar meu ebook</a>
+          <a href="https://giphy.com/explore/super-random" target="blank">GIF Random</a>
         </li>
 
         <li>
-          <a href="#" target="_blank">Qualquer Coisa</a>
+          <a href="https://www.pudim.com.br/" target="_blank">Pudim</a>
         </li>
 
         <li>
-          <a href="#" target="_blank">Piada random</a>
+          <a href="https://icanhazdadjoke.com/" target="_blank">Piada Random</a>
         </li>
       </ul>
       <div id="social-links">
@@ -47,15 +47,7 @@
           <ion-icon name="logo-github"></ion-icon>
         </a>
 
-        <a href="https://github.com/marcelosilva23" target="_blank">
-          <ion-icon name="logo-instagram"></ion-icon>
-        </a>
-
-        <a href="https://github.com/marcelosilva23" target="_blank">
-          <ion-icon name="logo-youtube"></ion-icon>
-        </a>
-
-        <a href="https://github.com/marcelosilva23" target="_blank">
+        <a href="https://www.linkedin.com/in/mguaraci/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
