--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
 
       <ul>
         <li>
-          <a href="#" target="_blank">Quem Sou</a>
+          <a href="https://github.com/marcelosilva23" target="_blank">GitHub</a>
         </li>
 
         <li>
-          <a href="https://giphy.com/explore/super-random" target="blank">GIF Random</a>
+          <a href="https://www.linkedin.com/in/mguaraci/" target="blank">LinkedIn</a>
         </li>
 
-        <li>
+  <!--       <li>
           <a href="https://www.pudim.com.br/" target="_blank">Pudim</a>
         </li>
 
         <li>
           <a href="https://icanhazdadjoke.com/" target="_blank">Piada Random</a>
-        </li>
+        </li> -->
       </ul>
       <div id="social-links">
         <a href="https://github.com/marcelosilva23" target="_blank">
